[gd_scene load_steps=12 format=2]

[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Settings.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 35
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 20
font_data = ExtResource( 1 )

[node name="Settings" type="Node"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.643137, 0.819608, 0.854902, 1 )

[node name="Mute" type="CheckBox" parent="."]
anchor_bottom = 0.011
margin_left = 48.0
margin_top = 208.0
margin_right = 174.0
margin_bottom = 245.08
custom_fonts/font = SubResource( 2 )
text = "MUTE"

[node name="FullScreen" type="CheckBox" parent="."]
margin_left = 48.0
margin_top = 248.0
margin_right = 305.0
margin_bottom = 293.0
custom_fonts/font = SubResource( 3 )
text = "FULL SCREEN"

[node name="Settings" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -104.0
margin_top = 48.0
margin_right = 104.0
margin_bottom = 91.0
custom_fonts/font = SubResource( 4 )
text = "SETTINGS"

[node name="Volume" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 152.0
margin_top = 184.0
margin_right = 190.0
margin_bottom = 203.0
custom_fonts/font = SubResource( 1 )
text = "50%"

[node name="HSlider" type="HSlider" parent="Volume"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -219.0
margin_top = -43.0
margin_right = -35.0
margin_bottom = 21.0
max_value = 1.0
step = 0.01
value = 0.5

[node name="Volume2" type="Label" parent="Volume"]
margin_left = -344.0
margin_top = -8.0
margin_right = -240.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 5 )
text = "VOLUME"

[node name="Difficulty" type="Label" parent="."]
margin_left = 56.0
margin_top = 304.0
margin_right = 128.0
margin_bottom = 329.0
custom_fonts/font = SubResource( 6 )
text = "MODE"

[node name="Normal" type="Label" parent="Difficulty"]
margin_left = 200.0
margin_right = 257.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 7 )
text = "Normal"

[node name="Easy" type="Button" parent="Difficulty"]
margin_left = 136.0
margin_right = 156.0
margin_bottom = 20.0
text = "<"

[node name="Hard" type="Button" parent="Difficulty"]
margin_left = 296.0
margin_right = 316.0
margin_bottom = 20.0
text = ">"

[node name="Menu" type="Button" parent="."]
margin_left = 104.0
margin_top = 568.0
margin_right = 372.0
margin_bottom = 668.0
custom_fonts/font = SubResource( 8 )
text = "BACK TO MENU"

[node name="ModeZen" type="CheckBox" parent="."]
anchor_right = 0.067
anchor_bottom = 0.2
margin_left = 48.0
margin_top = 344.0
margin_right = 161.84
margin_bottom = 233.0
custom_fonts/font = SubResource( 9 )
text = "MODE ZEN"

[connection signal="toggled" from="Mute" to="." method="_on_Mute_toggled"]
[connection signal="toggled" from="FullScreen" to="." method="_on_FullScreen_toggled"]
[connection signal="value_changed" from="Volume/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="pressed" from="Difficulty/Easy" to="." method="_on_Easy_pressed"]
[connection signal="pressed" from="Difficulty/Hard" to="." method="_on_Hard_pressed"]
[connection signal="pressed" from="Menu" to="." method="_on_Menu_pressed"]
[connection signal="toggled" from="ModeZen" to="." method="_on_ModeZen_toggled"]
